--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-hello i am jenny and i am bronze LUL
+hello my name is khall, welcome to my website
+
+<img src="http://wrightsdairyfarm.com/assets/img/cow-facts/fat-cow.jpg">
