--- a/index.html
+++ b/index.html
@@ -1,3 +1,1 @@
-hello my name is khall, welcome to my website
-
-<img src="http://wrightsdairyfarm.com/assets/img/cow-facts/fat-cow.jpg">
+placeholder
